# sile

./: .busted  .cirrus.yml  .commitlintrc.yml  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luacov  .luarc.json  .styluaignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  Cargo.toml  Dockerfile  Justfile  LICENSE  LICENSE.md  Makefile-fonts  Makefile-luarocks  Makefile.am  NEWS.md  README.md  ROADMAP  T  TODO  _config.yml  action.yml  appveyor.yml  architecture.txt  azure-pipelines.yml  bootstrap.sh  build.rs  configure.ac  default.nix  deny.toml  (+21 more)
.appveyor/: build.sh
.cargo/: config.toml
.dependabot/: config.yml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.husky/: commit-msg  post-checkout
.inno/: build_installer.bat  modpath.iss  sile.iss
.travis/: fold_unless_fail  setenv_lua.sh  setup_harfbuzz.sh  setup_lua.sh  shared-lua.patch
_data/: examples.yml
_includes/: body.html  head.html  menu.html  post.html  static.html
_layouts/: default.html  static.html
_posts/: 2014-08-29-SILE-0.9.0-is-released.md  2014-09-24-Whats-happening-in-SILE-development.md  2014-09-29-SILE-0.9.0-is-released.md  2014-10-30-SILE-0.9.1-is-released.md  2015-02-14-Whats-happening-in-SILE-development-Valentines-edition.md  2015-06-03-SILE-0.9.2-is-released.md  2015-06-26-SILE-is-now-in-homebrew.md  2016-03-14-visualizing-development-progress.md  2016-05-04-snake-justification.md  2016-08-31-SILE-0.9.4-is-released.md
build-aux/: action-updater.js  adl_recursive_eval.m4  ax_build_date_epoch.m4  ax_font.m4  ax_git_version.m4  ax_lua.m4  ax_lua_module.m4  ax_lua_require.m4  ax_luarocks_rock.m4  ax_rust_boilerplate.m4  ax_shell_completion_dirs.m4  ax_subst_man_date.m4  bootstrap-docker.sh  build-for-docker.sh  build.rs  cargo-updater.js  config.ld  create-homebrew-formula.pl  decore-automake.sh  docker-bootstrap.sh  docker-entrypoint.sh  docker-fontconfig.conf  docker-glibc-workaround.sh  docker-yay-runner.sh  git-version-gen  git_version.mk  import-tex-hyphens.sh  import-tex-hyphens.sh.in  list-dist-files.sh  list-dist-files.sh.in  list-distfiles.sh.in  pkg.nix  que_developer_mode.m4  que_dist_checksums.am  que_dist_checksums.m4  que_docker_boilerplate.am  que_docker_boilerplate.m4  que_font.m4  que_git_version.m4  que_libext.m4  (+15 more)
class/: plain.silejs  twocol.silejs
classes/: base.lua  bible.lua  book.lua  diglot.lua  docbook.lua  docbook.sil  jbook.lua  jplain.lua  lectionary.lua  letter.lua  markdown.lua  pecha.lua  plain.lua  tbook.lua  tplain.lua  triglot.lua
cmake/: fontconfig.diff  fonts_conf.cmake  generate_sile_rc.cmake  icu.diff  lua.diff  sile.rc.template  srlua.diff
core/: ast.lua  base-shaper.lua  baseclass.lua  baseclass.silejs  bidi.lua  break.lua  cairo-output.lua  cairo-output.silejs  classes.lua  cli.lua  color.lua  color_spec.lua  colorparser.lua  commands.lua  compat.lua  debug-output.lua  deprecations.lua  dummy-output.lua  features.lua.in  font.lua  fontmanager.lua  frame.lua  frame.silejs  frameparser.lua  frameparser.pegjs  frameparser.silejs  frames.lua  fundamentals.silejs  globals.lua  harfbuzz-shaper.lua  hyphenator-liang.lua  hyphenator-liang.silejs  init.lua  inputs-common.lua  inputs-texlike.lua  inputs-xml.lua  justenoughharfbuzz.c  knuth-plass.silejs  languages.lua  length.lua  (+42 more)
css/: main.css  responsive.css
documentation/: c01-whatis.sil  c02-gettingstarted.sil  c03-input.sil  c04-useful.sil  c05-packages.sil  c06-macroscommands.sil  c07-concepts.sil  c07-language.sil  c07-settings.sil  c08-classdesign.sil  c08-language.sil  c09-concepts.sil  c09-xmlproc.sil  c10-classdesign.sil  c10-tricks.sil  c11-inputoutput.sil  c11-xmlproc.sil  c12-tricks.sil  c12-xmlproc.sil  c13-markdown.md  c13-tricks.sil  developers.sil  fig-input-to-output.dot  macros.sil  macros.xml  sile.sil
examples/: arabic.sil  article-template.xml  bibtex.sil  book.sil  boustrophedon.sil  byhand.lua  chordmode.sil  conv-test.lua  conv-test.txt  converters.sil  frametricks.sil  global.md  gridtest.sil  heart-sutra.sil  hyperlink.sil  index.md  inputfilter.sil  japanese.sil  javanese.sil  letterspace.sil  ligature.sil  macros.sil  packages.md  parallel.sil  pullquote.sil  rotate.sil  rule.sil  showoff.expected  showoff.sil  simple-poetry.sil  simple.sil  simpletable.sil  snakes.sil  test.expected  test.sil  thai-udhr.sil  thai.xml  triglot.sil  weight-width.sil
fontmanagers/: base.lua  default.lua  fontconfig.lua  macfonts.lua
hooks/: build
hyphens/: README.md
i18n/: af.ftl  am.ftl  ar.ftl  as.ftl  bg.ftl  bn.ftl  bo.ftl  ca.ftl  cs.ftl  cy.ftl  da.ftl  de.ftl  el-monoton.ftl  el-polyton.ftl  el.ftl  en.ftl  eo.ftl  es.ftl  et.ftl  eu.ftl  fi.ftl  fr.ftl  ga.ftl  hi.ftl  hr.ftl  hu.ftl  hy.ftl  id.ftl  is.ftl  it.ftl  ja.ftl  jv.ftl  ka.ftl  kn.ftl  la.ftl  lt.ftl  lv.ftl  ml.ftl  mr.ftl  my.ftl  (+24 more)
images/: gource.webm
inputters/: ast.lua  base.lua  lua.lua  lua_spec.lua  markdown.lua  markdown_spec.lua  pandocast.lua  sil-epnf.lua  sil-lpeg-re.lua  sil.lua  sil_spec.lua  xml.lua  xml_spec.lua
justenough/: Makefile.am  compat-5.2.c  compat-5.2.h  fontmetrics.c  hb-utils.c  hb-utils.h  imagebbox.c  justenoughfontconfig.c  justenoughharfbuzz.c  justenoughicu.c  justenoughlibtexpdf.c  macfonts.m  nanosvg.h  podofo_wrap.cxx  silewin32.h  svg.c
l10n/: en.ftl
languages/: README.md  af.lua  am.lua  ar.lua  as.lua  base-hyphenator.lua  base-ltr.lua  base-nodemaker.lua  base.lua  bg.lua  bn.lua  bo.lua  ca.lua  cop.lua  cs.lua  cu.lua  cy.lua  da.lua  de.lua  el-monoton.lua  el-polyton.lua  el.lua  en-compiled.lua  en.lua  en.silejs  eo.lua  es.lua  et.lua  eu.lua  fi.lua  fr.lua  ga.lua  gu.lua  hi.lua  hr.lua  hu.lua  hy.lua  id.lua  is.lua  it.lua  (+43 more)
rusile/: Cargo.toml
rusile/src/: lib.rs
src/: Makefile.am  cli.rs  embed.rs.in  fontmetrics.c  hb-utils.c  imagebbox.c  justenoughfontconfig.c  justenoughharfbuzz.c  justenoughicu.c  justenoughlibtexpdf.c  justenoughthai.c  lib.rs  macfonts.m  nanosvg.h  podofo_wrap.cxx  sile-entry.sh.in  silewin32.h  svg.c  winfonts.cc
src/types/: semver.rs
(+1046 files in other folders)
